--- a/workspaces/app/src/styles/card.sass
+++ b/workspaces/app/src/styles/card.sass
@@ -1,23 +1,19 @@
 .data-card
-  width: 160px
-  padding: 40px
-  background-color: #21232E
   display: flex
   flex-direction: column
-  align-items: center
-  gap: 30px
-  border-radius: 10px
-  &--heading
-    font-size: 18px
-    text-align: center
-    font-weight: 400
-  &--body
-    display: flex
-    align-items: center
-    justify-content: space-between
-    gap: 15px
-    p
-      font-size: 36px
-  &--footer
-    font-size: 14px
-    opacity: 0.75
+  width: 130px
+  height: 100px
+  border-radius: 20px
+  background: rgba(227, 223, 237, 0.8)
+  backdrop-filter: blur(10px)
+  color: #000
+  padding: 15px 15px 40px 15px
+  &--content
+    &--number
+      letter-spacing: 0.05em
+      line-height: 45px
+      font-weight: 500
+      font-size: 26px
+    &--name
+      letter-spacing: 0.05em
+      font-size: 16px
