--- a/workspaces/app/src/styles/deviceCard.sass
+++ b/workspaces/app/src/styles/deviceCard.sass
@@ -1,35 +1,32 @@
 .device-card
   display: flex
-  align-items: center
   flex-direction: column
-  background-color: #21232E
-  border-radius: 15px
-  gap: 40px
-  width: 160px
-  padding: 65px 70px 25px 70px
-  &--icon
-    font-size: 42px
+  width: 130px
+  height: 130px
+  border-radius: 20px
+  background: rgba(227, 223, 237, 0.8)
+  backdrop-filter: blur(10px)
+  color: #000
+  padding: 15px
   &--content
-    display: flex
-    flex-direction: column
-    align-items: center
-    gap: 25px
+    img
+      margin-bottom: 10px
     &--name
-      font-size: 24px
-      font-weight: 400
+      font-size: 20px
+      font-weight: 500
+      letter-spacing: 0.05em
+      padding-bottom: 30px
     &--btn
-      padding: 10px 0
-      border-radius: 30px
+      width: 130px
+      border-radius: 15px
       border: none
       cursor: pointer
-      width: 150px
-      font-size: 18px
+      font-size: 16px
       color: rgba(255, 255, 255, 0.7)
       background-color: #6839EF
-      letter-spacing: 0.3em
+      letter-spacing: 0.05em
+      padding: 5px 30px
       transition: 350ms ease-in
-    &--btn:hover
-      box-shadow: 0 0 10px #6839EF
 
 .modal
   display: flex
