--- a/workspaces/app/src/styles/sidebar.sass
+++ b/workspaces/app/src/styles/sidebar.sass
@@ -1,48 +1,33 @@
 nav
-  background-color: #21232E
+  background-color: #E3DFED
+  color: #000
+  display: flex
+  flex-direction: column
+  justify-content: space-between
   position: fixed
   left: 0
   top: 0
   bottom: 0
-  display: flex
-  flex-direction: column
-  justify-content: space-between
   z-index: 9999999
-  border-radius: 0 15px 15px 0
+  border-radius: 15px
   padding: 20px
+  margin: 20px
 .nav
   &--heading
     display: flex
     flex-direction: column
     align-items: center
     gap: 20px
-    &--photo-wrapper
-      margin: 0
-      text-align: center
-      font-size: 18px
-      img
-        width: 80px
-        height: 80px
-        overflow: hidden
-        margin: 0 auto
-        border-radius: 100%
-        background-color: #eee
-    &--username
-      font-size: 24px
-      font-weight: 400
   &--body
     display: flex
     flex-direction: column
-    gap: 20px
+    gap: 40px
 
 .sidebar-button
   display: flex
   align-items: center
-  background-color: #161821
+  justify-content: center
   text-align: center
-  padding: 20px
-  gap: 10px
   border-radius: 15px
   transition: 350ms ease-in
-.sidebar-button:hover
-  box-shadow: 0 0 10px #6839EF
+
