FIX: Style mini rework

--- a/workspaces/app/src/styles/index.sass
+++ b/workspaces/app/src/styles/index.sass
@@ -21,6 +21,7 @@ main
   height: 100vh
 header
   z-index: 10
+  backdrop-filter: blur(20px)
   -webkit-backdrop-filter: blur(20px)
 h1, h2, h3, h4, h5, h6, p
   margin-block: 0
@@ -37,7 +38,7 @@ a
   height: auto
   margin: 0 auto
 .hero
-  margin-top: 80px
+  margin-top: 110px
   &--container
     display: flex
   &--heading
