--- a/workspaces/app/src/styles/header.sass
+++ b/workspaces/app/src/styles/header.sass
@@ -1,4 +1,8 @@
 .header
+  position: fixed
+  top: 0
+  right: 0
+  left: 0
   &--container
     display: flex
     justify-content: space-between
@@ -6,7 +10,7 @@
     max-width: 1040px
     height: auto
     margin: 0 auto
-    padding: 40px 0
+    padding: 25px 0
     &--navigation
       display: flex
       align-items: center
