FIX: Animations are played only if they are available in the viewport

--- a/workspaces/app/src/styles/index.sass
+++ b/workspaces/app/src/styles/index.sass
@@ -68,6 +68,7 @@ a
     top: 140px
     right: -225px
 .about
+  height: 75vh
   padding-top: 180px
   &--title
     font-size: 72px
@@ -77,7 +78,7 @@ a
   &--content
     width: 100%
     overflow-x: hidden
-    padding-top: 100px
+    margin-top: 150px
     &__right-info
       display: flex
       justify-content: flex-end
@@ -104,7 +105,6 @@ a
         padding-left: 80px
         text-shadow: 0 0 2px #FFFFFF
 .scope
-  padding-top: 150px
   &--title
     font-size: 72px
     font-weight: 400
@@ -115,7 +115,7 @@ a
     display: flex
     justify-content: space-between
     flex-wrap: wrap
-    padding-top: 100px
+    margin-top: 100px
     &--first
       display: flex
       flex-direction: column
