--- a/workspaces/app/src/styles/login.sass
+++ b/workspaces/app/src/styles/login.sass
@@ -11,13 +11,13 @@
     position: absolute
     font-size: 160px
     font-weight: 400
+    opacity: 0.85
     top: 0
     left: -5px
     writing-mode: vertical-lr
     text-orientation: mixed
     color: transparent
-    -webkit-text-stroke: 1px rgba(75, 77, 88, 1)
-    opacity: 0.5
+    -webkit-text-stroke: 1px #fff
     letter-spacing: 0.1em
   &--form
     display: flex
@@ -34,6 +34,16 @@
     .email-input-wrapper
       display: flex
       align-items: center
+    &--pass
+      margin-bottom: 20px !important
+    &--check
+      width: 100%
+      display: flex
+      align-items: center
+      justify-content: space-between
+      margin-bottom: 20px
+      &--forget
+        color: #6839EF
     &--submit
       background-color: #6839EF
       color: #ffff
