WIP: Recovery page

--- a/workspaces/app/src/styles/login.sass
+++ b/workspaces/app/src/styles/login.sass
@@ -30,12 +30,10 @@
       border-radius: 15px
       border: none
       width: 350px
-      margin-bottom: 30px
+      margin-bottom: 20px
     .email-input-wrapper
       display: flex
       align-items: center
-    &--pass
-      margin-bottom: 20px !important
     &--check
       width: 100%
       display: flex
@@ -54,6 +52,15 @@
     &--submit:hover
       box-shadow: 0 0 10px #6839EF
     &--sign-up
+      font-size: 16px
+      a
+        color: #6839EF
+        text-decoration-line: underline
+    &--heading
+      font-size: 24px
+      font-weight: 400
+      margin-bottom: 20px
+    &--back
       font-size: 16px
       a
         color: #6839EF
